--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -182,20 +182,11 @@
     [dataKey]="dataKey()" [value]="featureDptos" [scrollable]="true" [(selection)]="featuresSelected"
     (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" scrollHeight="{{heightTable}}px">
     <ng-template pTemplate="caption">
-      <div style="display: grid; grid-template-columns: auto auto;">
-        <div>
-          <button pButton type="button" (click)="previousLayer()" class="ui-button-rounded"
-            icon="fas fa-arrow-circle-left" title="Ver ant capa"></button>
-          {{layerSelected.title.substr(11)}}
-          <button pButton type="button" (click)="nextLayer()" class="ui-button-rounded" icon="fas fa-arrow-circle-right"
-            title="Ver sgte capa"></button>
-        </div>
-        <div style="text-align: right">
-          <!-- <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
-          <input type="text" pInputText size="30" placeholder="Filtro global"
-            (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto"> -->
-        </div>
-      </div>
+      <button pButton type="button" (click)="previousLayer()" class="ui-button-rounded" icon="fas fa-arrow-circle-left"
+        title="Ver ant capa"></button>
+      {{layerSelected.title.substr(11)}}
+      <button pButton type="button" (click)="nextLayer()" class="ui-button-rounded" icon="fas fa-arrow-circle-right"
+        title="Ver sgte capa"></button>
     </ng-template>
     <ng-template pTemplate="colgroup" let-columns>
       <colgroup>
@@ -209,8 +200,23 @@
         </th>
       </tr>
       <tr>
-        <th *ngFor="let col of columns">
-          <input pInputText type="text" (input)="dt.filter($event.target.value, attrFilter(col.name), 'contains')">
+        <th *ngFor="let col of columns; let i = index">
+          <span style="display: grid; grid-template-columns: auto auto;" class="filter">
+            <select name="select" *ngIf="view.ready" class="esri-select" [(ngModel)]="filter[i]">
+              <option value="contains" selected>contiene</option>
+              <option value="startsWith">empiece por</option>
+              <option value="endsWith">termina por</option>
+              <option value="equals">igual</option>
+              <option value="notEquals">no igual a</option>
+              <option *ngIf="col.type !== 'string'" value="lt">menor que</option>
+              <option *ngIf="col.type !== 'string'" value="lte">menor o igual que</option>
+              <option *ngIf="col.type !== 'string'" value="gt">mayor que</option>
+              <option *ngIf="col.type !== 'string'" value="gte">mayor o igual que</option>
+
+            </select>
+            <input class="esri-input" type="text"
+              (input)="dt.filter($event.target.value, attrFilter(col.name), filter[i])">
+          </span>
         </th>
       </tr>
       <tr style="background: transparent;">
@@ -226,6 +232,8 @@
     </ng-template>
     <ng-template pTemplate="summary">
       <div id="excel">
+        <button pButton icon="pi pi-search" class="ui-button-rounded ui-button-secodnary"
+          pTooltip="Buscar información"></button>
         <button pButton icon="esri-icon-download" class="ui-button-rounded ui-button-warning"
           pTooltip="Exportar a Shapefile" (click)="extractShapeFromAttr()"></button>
         <button pButton icon="fas fa-file-excel" class="ui-button-rounded ui-button-success" pTooltip="Exportar a Excel"
