Ajuste: Cambio de íconos para opción Mis Capas del menú

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -453,7 +453,7 @@ p-sidebar {
 ::ng-deep .icofont-tools-alt-2,
 ::ng-deep .icofont-download-alt,
 ::ng-deep .icofont-printer,
-::ng-deep .icofont-location-pin {
+::ng-deep .icofont-upload {
   font-size: 22px !important;
 }
 
