--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -25,7 +25,7 @@
           <i class="esri-icon-description" align="center"></i>
         </button>
         <button class="esri-button" style="background-color: #44546A; border-color: #44546A; border-radius: 4px;"
-          title="Descargar capa general" (click)="openExtract()">
+          title="Descargar capa" (click)="openExtract()">
           <i class="esri-icon-download" align="center"></i>
         </button>
       </div>
