--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -450,27 +450,30 @@ p-sidebar {
   margin-left: 10%;
 }
 
-::ng-deep .icofont-tools-alt-2,
-::ng-deep .icofont-download-alt,
-::ng-deep .icofont-printer,
-::ng-deep .icofont-upload {
-  font-size: 22px !important;
-}
-
 ::ng-deep .icofont-web,
 ::ng-deep .icofont-file-psd,
 ::ng-deep .icofont-file-excel,
 ::ng-deep .icofont-file-zip,
 ::ng-deep .esri-icon-download,
 ::ng-deep .icofont-ruler-compass,
-::ng-deep .icofont-scroll-bubble-up,
+::ng-deep .fa-bullseye,
+::ng-deep .fa-clone,
 ::ng-deep .icofont-location-pin,
-::ng-deep .icofont-focus,
+::ng-deep .esri-icon-locate,
 ::ng-deep .icofont-map,
 ::ng-deep .icofont-swirl,
 ::ng-deep .icofont-paint,
+::ng-deep .icofont-print,
 ::ng-deep .icofont-color-bucket {
-  font-size: 23px !important;
+  font-size: 18px !important;
+}
+
+::ng-deep .icofont-tools-alt-2,
+::ng-deep .icofont-download-alt,
+::ng-deep .icofont-printer,
+::ng-deep #buttons .icofont-ruler-compass,
+::ng-deep .icofont-upload {
+  font-size: 22px !important;
 }
 
 * >>> .ui-datatable-scrollable {
