Ajuste: Se priorizan el órden de las capas

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -184,7 +184,7 @@
     <ng-template pTemplate="caption">
       <button pButton type="button" (click)="previousLayer()" class="ui-button-rounded" icon="fas fa-arrow-circle-left"
         title="Ver ant capa"></button>
-      {{layerSelected.title.substr(11)}}
+      {{layerSelected.title}}
       <button pButton type="button" (click)="nextLayer()" class="ui-button-rounded" icon="fas fa-arrow-circle-right"
         title="Ver sgte capa"></button>
       <!-- <div style="text-align: right">
