--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -187,12 +187,6 @@
       {{layerSelected.title}}
       <button pButton type="button" (click)="nextLayer()" class="ui-button-rounded" icon="fas fa-arrow-circle-right"
         title="Ver sgte capa"></button>
-      <!-- <div style="text-align: right">
-          <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
-          <input type="text" pInputText size="30" placeholder="Filtro global"
-            (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
-        </div>
-      </div>-->
     </ng-template>
     <ng-template pTemplate="colgroup" let-columns>
       <colgroup>
@@ -225,7 +219,7 @@
         </th>
       </tr>
       <tr style="background: transparent;">
-        <td style="padding: 0px; " [attr.colspan]="columns.length">
+        <td style="padding: 0px; ">
           <p-progressBar mode="indeterminate" *ngIf="makingWork" [style]="{'height': '6px'}"></p-progressBar>
         </td>
       </tr>
