Ajuste: Se arreglo error de carga de tabla de atributos

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -177,7 +177,7 @@
 <!-- Modal de tabla de atributos -->
 <p-dialog id="attr-table" header="Tabla de Atributos" [(visible)]="modalTable" [resizable]="false"
   (onHide)="onHideDialogAtributos()" [maximizable]="true" [style]="{'width': '500px'}" >
-  <p-table class="esri-widget__table" [style]="{'width': 'inherit'}" [paginator]="true" [rows]="100"
+  <p-table class="esri-widget__table" [style]="{'width': 'inherit', 'max-height': '500px'}" [paginator]="true" [rows]="100"
     [rowsPerPageOptions]="[100,200,500]" selectionMode="multiple" #dt [columns]="columnsTable" *ngIf="modalTable"
     [dataKey]="dataKey()" [value]="featureDptos" [scrollable]="true" [(selection)]="featuresSelected"
     (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" scrollHeight="{{heightTable}}px">
