Ajuste: Autor y Copyright para la función export

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -523,3 +523,9 @@ p-sidebar {
 ::ng-deep .esri-icon-polygon:before {
   color: initial;
 }
+
+
+::ng-deep .esri-print__author-info-container,
+::ng-deep .esri-print__copyright-info-container{
+  display: none !important;
+}
