Ajuste: Manejo de información y mensajes de fuente de información

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -363,6 +363,9 @@
       <br> Para la selección con un punto <b>clic</b> en el mapa.
       <br>Para las demás herramientas haga <b>clic</b> y sostenga
       <br> mientras mueve el mouse, y suelte para finalizar."></p-message>
+  <br>
+  <p-message id="infoMedicion" severity="info"
+    text="Fuentes de información: <br>*SGC: {{copyrightSGC}} <br>**IGAC: {{copyrightIGAC}}"></p-message>
 </p-dialog>
 <!-- Fin de modal herramientas de selección -->
 
